therapist sign up tab

--- a/src/app/therapist-sign-up/therapist-sign-up.component.html
+++ b/src/app/therapist-sign-up/therapist-sign-up.component.html
@@ -1,3 +1,21 @@
-<p>
-  therapist-sign-up works!
-</p>
+<h2>Apply to join ThoughtPath</h2>
+
+<div>
+  <label>Patient name:
+    <input #patientName />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(patientName.value); patientName.value=''">
+    add
+  </button>
+</div>
+
+<ul class="patients">
+  <li *ngFor="let patient of patients">
+    <a routerLink="/detail/{{patient.id}}">
+      <span class="badge">{{patient.id}}</span> {{patient.name}}
+    </a>
+    <button class="delete" title="delete patient"
+            (click)="delete(patient)">x</button>
+  </li>
+</ul>
