--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,11 +15,14 @@
         </div>
         <div id="navbarMenuHeroC" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" routerLink="/dashboard">
+            <a class="navbar-item" routerLink="/dashboard">
               Dashboard
             </a>
             <a class="navbar-item" routerLink="/patients">
               Patients
+            </a>
+            <a class="navbar-item" routerLink="/therapist-sign-up">
+              Therapists
             </a>
           </div>
         </div>
