--- a/src/app/therapist-sign-up/therapist-sign-up.component.html
+++ b/src/app/therapist-sign-up/therapist-sign-up.component.html
@@ -1,21 +1,87 @@
-<h2>Apply to join ThoughtPath</h2>
+<div class="container">
+  <h2>Join ThoughtPath's Network!</h2>
 
-<div>
-  <label>Patient name:
-    <input #patientName />
-  </label>
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(patientName.value); patientName.value=''">
-    add
-  </button>
+  <div class="field">
+    <label class="label">Name</label>
+    <div class="control">
+      <input class="input" type="text" placeholder="Text input">
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Username</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-success" type="text" placeholder="Text input" value="bulma">
+      <span class="icon is-small is-left">
+      <i class="fas fa-user"></i>
+    </span>
+      <span class="icon is-small is-right">
+      <i class="fas fa-check"></i>
+    </span>
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Email</label>
+    <div class="control has-icons-left has-icons-right">
+      <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+      <span class="icon is-small is-left">
+      <i class="fas fa-envelope"></i>
+    </span>
+      <span class="icon is-small is-right">
+      <i class="fas fa-exclamation-triangle"></i>
+    </span>
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Subject</label>
+    <div class="control">
+      <div class="select">
+        <select>
+          <option>Select dropdown</option>
+          <option>With options</option>
+        </select>
+      </div>
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Message</label>
+    <div class="control">
+      <textarea class="textarea" placeholder="Textarea"></textarea>
+    </div>
+  </div>
+
+  <div class="field">
+    <div class="control">
+      <label class="checkbox">
+        <input type="checkbox">
+        I agree to the <a href="#">terms and conditions</a>
+      </label>
+    </div>
+  </div>
+
+  <div class="field">
+    <div class="control">
+      <label class="radio">
+        <input type="radio" name="question">
+        Yes
+      </label>
+      <label class="radio">
+        <input type="radio" name="question">
+        No
+      </label>
+    </div>
+  </div>
+
+  <div class="field is-grouped">
+    <div class="control">
+      <button class="button is-link">Submit</button>
+    </div>
+    <div class="control">
+      <button class="button is-text">Cancel</button>
+    </div>
+  </div>
+
 </div>
-
-<ul class="patients">
-  <li *ngFor="let patient of patients">
-    <a routerLink="/detail/{{patient.id}}">
-      <span class="badge">{{patient.id}}</span> {{patient.name}}
-    </a>
-    <button class="delete" title="delete patient"
-            (click)="delete(patient)">x</button>
-  </li>
-</ul>
