Added patient signup frontend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
             <a class="navbar-item" routerLink="/therapist-sign-up">
               Therapists
             </a>
+            <a class="navbar-item" routerLink="/patient-sign-up">
+              Sign Up
+            </a>
           </div>
         </div>
       </div>
