--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Top Patients</h3>
+<h3>Matched Patients</h3>
 <div class="grid grid-pad">
   <a *ngFor="let patient of patients" class="col-1-4"
      routerLink="/detail/{{patient.id}}">
