patient sign up w/ surveyjs css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 </section>
 
   <div class="container is-light is-fullheight">
-    <router-outlet class="is-fullheight"></router-outlet>
+    <router-outlet></router-outlet>
   </div>
 
 
