--- a/src/app/patient-sign-up/patient-sign-up.component.html
+++ b/src/app/patient-sign-up/patient-sign-up.component.html
@@ -1,1 +1,6 @@
-<div id='surveyElement'></div>
+<div class = "container">
+  <h2>Join ThoughtPath's Network!</h2>
+
+  <div id='surveyElement'></div>
+</div>
+
