Deleted prev sign-up components and made one main one

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,11 +18,8 @@
             <a class="navbar-item" routerLink="/dashboard">
               Dashboard
             </a>
-            <a class="navbar-item" routerLink="/therapist-sign-up">
-              Therapist Sign-Up
-            </a>
-            <a class="navbar-item" routerLink="/patient-sign-up">
-              Patient Sign-Up
+            <a class="navbar-item" routerLink="/sign-up">
+              Sign-Up
             </a>
           </div>
         </div>
