send json up up up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,9 @@
         </div>
         <div id="navbarMenuHeroC" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item" routerLink="/dashboard">
+            <!--<a class="navbar-item" routerLink="/dashboard">
               Dashboard
-            </a>
+            </a>-->
             <a class="navbar-item" routerLink="/sign-up">
               Sign-Up
             </a>
